# kuberun

./: .env.example  README.md  pyproject.toml
examples/: transcribe_video_hf.py
src/run_on_k8s/: main.py
src/run_on_k8s/resources/: Dockerfile  template.py
tests/: kuberun.toml  test_e2e.py
